# template-hls-float

./: .gitignore  CMakeLists.txt  Vagrantfile  makefile  readme.md
constrs_1/new/: constraints.xdc
include/thls/: core.hpp
include/thls/composite/: composite_dot.hpp
include/thls/core/: base_ops.hpp  constfunc_helpers.hpp  ct_bigint-orig.hpp  ct_bigint.hpp  ct_bigint_add.hpp  ct_bigint_compare.hpp  ct_bigint_core.hpp  ct_bigint_create.hpp  ct_bigint_gcd.hpp  ct_bigint_itf.hpp  ct_bigint_mul.hpp  ct_helpers.hpp
include/thls/functions/: horner.hpp  product.hpp  rom.hpp  (+1 more)
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  gen_synthesise_tcl.sh  parse_rpt.py
src/benchmarks/dot_product/: dot_product.hpp  dot_product_par4_tl.hpp  dot_product_par4_tl_hls16_hls16_hls16_round.cpp  dot_product_par4_tl_hls24_hls16_hls16_full.cpp  dot_product_par4_tl_hls24_hls16_hls16_round.cpp  dot_product_par4_tl_hls24_hls24_hls24_round.cpp  dot_product_par4_tl_hls32_hls16_hls16_full.cpp  dot_product_par4_tl_hls32_hls16_hls16_round.cpp  dot_product_par4_tl_hls32_hls32_hls16_round.cpp  dot_product_par4_tl_hls32_hls32_hls32_round.cpp  dot_product_par4_tl_hls48_hls24_hls24_round.cpp  dot_product_par4_tl_hls48_hls48_hls48_round.cpp  dot_product_par4_tl_hls64_hls32_hls32_full.cpp  dot_product_par4_tl_hls64_hls32_hls32_round.cpp  dot_product_par4_tl_hls64_hls64_hls32_round.cpp  dot_product_par4_tl_hls64_hls64_hls64_round.cpp  dot_product_par4_tl_nat16_nat16_nat16_round.cpp  dot_product_par4_tl_nat32_nat16_nat16_round.cpp  dot_product_par4_tl_nat32_nat32_nat16_round.cpp  dot_product_par4_tl_nat32_nat32_nat32_round.cpp  dot_product_par4_tl_nat64_nat32_nat32_round.cpp  dot_product_par4_tl_nat64_nat64_nat32_round.cpp  dot_product_par4_tl_soft32_soft32_soft32_round.cpp  sweep_types.hpp
src/benchmarks/mat_mul/: mat_mul_16x16.hpp  mat_mul_16x16_hls16_hls16_hls16_round.cpp  mat_mul_16x16_hls32_hls16_hls16_full.cpp  mat_mul_16x16_hls32_hls16_hls16_round.cpp  mat_mul_16x16_hls32_hls32_hls32_round.cpp  mat_mul_16x16_hls64_hls32_hls32_full.cpp  mat_mul_16x16_hls64_hls32_hls32_round.cpp  mat_mul_16x16_hls64_hls64_hls64_round.cpp  mat_mul_16x16_nat16_nat16_nat16_round.cpp  mat_mul_16x16_nat32_nat16_nat16_round.cpp  mat_mul_16x16_nat32_nat32_nat32_round.cpp  mat_mul_16x16_nat64_nat32_nat32_round.cpp  mat_mul_16x16_nat64_nat64_nat64_round.cpp
src/ct_rng/: CMakeLists.txt  test_ct_random_permute.cpp  test_ct_rng.cpp  test_ct_unique.cpp  test_lcg_mod_2y32.cpp  test_lcg_mod_p.cpp
src/examples/: dot_product.cpp  sum.cpp
src/examples/intel_hls/: build.bat  dot_product.cpp
src/examples/legup/: Makefile  dot_product.c
src/fp_ops/: .gitignore  CMakeLists.txt  makefile  min_run_length.py  mul.hpp  test_add.cpp  test_add_different_exp.cpp  test_add_different_frac.cpp  test_add_dual.cpp  test_add_dual_debug.cpp  test_add_param.cpp  test_add_single.cpp  test_add_single_debug.cpp  test_add_single_different_exp.cpp  test_add_single_different_frac.cpp  test_add_single_different_frac_v5.cpp  test_add_single_param.cpp  test_add_single_v2.cpp  test_add_single_v3.cpp  test_add_single_v4.cpp  test_bit_heap.cpp  test_bit_heap_mul.cpp  test_bits.cpp  test_cmult_generic.cpp.in  test_cmult_perf.cpp.in  test_div.cpp  test_div_param.cpp  test_div_v2.cpp  test_div_v2_debug.cpp  test_div_v3.cpp  test_dot2_pos_rndd.cpp  test_dot2_pos_rndn.cpp  test_dot4_pos_rndd.cpp  test_fma.cpp  test_fp2fix.cpp  test_fp_convert.cpp  test_fp_flopoco.cpp  test_fp_ieee.cpp  test_inv_nr.cpp  test_lut_opt.cpp  (+12 more)
src/fp_ops/mini_progs/: CMakeLists.txt  add32x4_compressor.cpp  add32x4_row_heap.cpp  add32x8_compressor.cpp  add32x8_row_heap.cpp  add64x8.cpp
src/fp_ops/mini_progs/compressor/: add32x4_compressor.cpp  add64x8_compressor.cpp
src/fp_ops/mini_progs/fp/: CMakeLists.txt
src/fp_ops/mini_progs/fp/composite/: fp_dot_product.cpp  fp_sum_array.cpp
src/fp_ops/mini_progs/fp/primitive/: CMakeLists.txt  fp_add_flopoco_dual_EEE_FFF.cpp  fp_add_flopoco_single_EEE_FFF.cpp  fp_add_ieee_on_flopoco_EEE_FFF.cpp  fp_add_native_10_52.cpp  fp_add_native_8_23.cpp  fp_div_flopoco_EEE_FFF.cpp  fp_div_flopoco_v2_EEE_FFF.cpp  fp_div_flopoco_v3_EEE_FFF.cpp  fp_div_ieee_on_flopoco_EEE_FFF.cpp  fp_div_native_10_52.cpp  fp_div_native_8_23.cpp  fp_mul_flopoco_EEE_FFF.cpp  fp_mul_ieee_on_flopoco_EEE_FFF.cpp  fp_mul_native_10_52.cpp  fp_mul_native_8_23.cpp
src/fp_ops/mini_progs/vhls/: CMakeLists.txt  gen_implement_tcl.sh  gen_synthesise_tcl.sh
src/fp_ops/mp/: CMakeLists.txt
src/fp_ops/mp/compressor/: add32x8.cpp  add32x8_compressor.cpp  add64x8_compressor.cpp
src/fp_ops/mp/flopoco/: CMakeLists.txt
src/fp_ops/mp/fp/composite/: fp_dot_product_u2.cpp  fp_mmm.cpp  fp_mmm_u2.cpp  fp_sum_array_u2.cpp  fp_sum_vec4_balanced.cpp  fp_sum_vec4_left.cpp
src/fp_ops/mp/fp/primitive/: CMakeLists.txt  fp_add_flopoco_dual_EEE_FFF.cpp  fp_add_flopoco_single_EEE_FFF.cpp  fp_add_flopoco_single_ratio_EEE1_FFF1_EEE2_FFF2.cpp  fp_add_flopoco_single_v2_EEE_FFF.cpp  fp_add_flopoco_single_v3_EEE_FFF.cpp  fp_add_flopoco_single_v4_EEE_FFF.cpp  fp_add_ieee_on_flopoco_EEE_FFF.cpp  fp_add_native_11_52.cpp  fp_add_native_5_10.cpp  fp_add_native_fulldsp_8_23.cpp  fp_add_native_nodsp_11_52.cpp  fp_add_native_nodsp_5_10.cpp  fp_add_native_nodsp_8_23.cpp  fp_add_softfloat_8_23.cpp  fp_div_flopoco_EEE_FFF.cpp  fp_div_flopoco_v2_EEE_FFF.cpp  fp_div_flopoco_v3_EEE_FFF.cpp  fp_div_ieee_on_flopoco_EEE_FFF.cpp  fp_div_native_11_52.cpp  fp_div_native_5_10.cpp  fp_div_softfloat_8_23.cpp  fp_mul_flopoco_EEE_FFF.cpp  fp_mul_flopoco_ratio_EEE1_FFF1_EEE2_FFF2.cpp  fp_mul_ieee_on_flopoco_EEE_FFF.cpp  fp_mul_native_11_52.cpp  fp_mul_native_5_10.cpp  fp_mul_native_fulldsp_8_23.cpp  fp_mul_native_maxdsp_8_23.cpp  fp_mul_native_meddsp_8_23.cpp  fp_mul_native_nodsp_8_23.cpp  fp_mul_softfloat_8_23.cpp
src/fp_ops/mp/vhls/: CMakeLists.txt  gen_implement_tcl.sh  gen_synthesise_tcl.sh  merge_rows.py  parse_impl_logs.py  parse_rpt.py
src/test/: intval1.cpp  intval_uint8.cpp  test_intval1.cpp  test_intval_uint8.cpp
src/throwaway/: constexpr.cpp  constexpr_fix.cpp  constexpr_tuple.cpp  ct_bigint.cpp  ct_bigint_v2.cpp
(+90 files in other folders)
